P1Back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parcial1-paa
  name: p1-back
  namespace: deployments  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parcial1-paa
  template:
    metadata:
      labels:
        app: parcial1-paa
    spec:
      containers:
      - image: luisgalvisp/p1_back
        name: backend
        ports:
        - containerPort: 8080
        env: # Conexión a mysql
        - name: SPRING_DATASOURCE_URL
          value: "jdbc:mysql://database-service:3306/paa-p1"
        - name: SPRING_DATASOURCE_USERNAME
          value: "root"
        - name: SPRING_DATASOURCE_PASSWORD
          value: "12345" 
        - name: SPRING_JPA_HIBERNATE_DDL_AUTO
          value: "update"
        - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
          value: "com.mysql.cj.jdbc.Driver"
        resources:
          requests:
            memory: "500Mi"
            cpu: "150m"
          limits:
            memory: "1Gi"
            cpu: "600m"
        startupProbe: # Verificación inicial de subida
          httpGet:
            path: /saludo
            port: 8080
          initialDelaySeconds: 30
          failureThreshold: 3
          periodSeconds: 5
        livenessProbe: # Verificación de que sigue vivo
          httpGet:
            path: /saludo
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 2
