P1Front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - image: luisgalvisp/p1_front
        name: front
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "150m"
          limits:
            memory: "1Gi"
            cpu: "600m"
        startupProbe: # Verificamos que subió
          httpGet:
            path: /saludo
            port: 8080
          initialDelaySeconds: 30
          failureThreshold: 3
          periodSeconds: 5
        livenessProbe: # Verificamos que sigue vivo
          httpGet:
            path: /saludo
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 3
