P1Back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
  namespace: services  
spec:
  selector:
    app: parcial1-paa
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
