P1DB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: services  
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
