P1Front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: services  
spec:
  selector:
    app: parcial1-paa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
